docs: simplify README and remove HFactor references